[package]
name = "spacepile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.66", features= ["std", "backtrace"]}
clap = { version = "4.0.29", features = ["derive"] }
ndarray = { version = "0.15.6", features=["std", "rayon"]}
numpy =  { version = "0.18.0"}
rust-htslib = { git = "https://github.com/brentp/rust-htslib", branch="csv-pos", features=["static", "gcs", "s3", "libdeflate"]}

[dependencies.pyo3]
version = "0.18.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
abi3 = []

[lib]
crate-type = ["cdylib", "rlib"]
