[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "spacepile"
dynamic =  ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
compatibility = "linux"
